--- a/app/design/adminhtml/default/default/template/order/quote/billing/method.phtml
+++ b/app/design/adminhtml/default/default/template/order/quote/billing/method.phtml
@@ -1,20 +1,28 @@
 <?php $methods = $this->getPayemntMethodTitle() ?>
-    <fieldset class="np">
-        <div class="edit-form" id="order-shipping_address_fields">
-            <div class="content">
-                    <div class="hor-scroll">
-                            <table cellspacing="0" class="form-list">
-                                <?php foreach ($methods as $key => $value) : ?>
-                                    <tbody>
-                                        <tr>
-                                            <td><input type="radio" name="billingMethod" id="<?php echo $key ?>" value="<?php echo $key ?>">
-                                            <label for="<?php echo $key ?>"><?php echo $key ?></label><br>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                <?php endforeach; ?>
-                            </table>
-                    </div>
+<?php $methodCode = $this->getCode() ?>
+<div id="order-billing_method" class="box-left payments" style="height: 200px;">
+    <div>
+        <div class="entry-edit">
+            <button style="float: right;" type="button"  onclick="biilingMethodSave()"  name="billing" class="scalable task">Save</button>
+            <div class="entry-edit-head">
+                <div style="float: right;"></div>
+                <h4 class="fieldset-legend head-payment-method icon-head">Payment Method</h4>
+            </div>
+            <div class="fieldset">
+                <div id="order-billing_method_form">
+                    <dl class="payment-methods">
+                        <?php foreach($methods as $code => $method): ?>
+                        <dt>
+                            <input value="<?php echo $code ?>" type="radio" <?php if($methodCode == $code): ?>checked<?php endif; ?> name="method[payment]"
+                                title="Credit Card (saved)" >
+
+                            <label for="p_method"><?php echo $method->getTitle() ?></label>
+                        </dt>
+                        <?php endforeach; ?>
+                    </dl>
+                </div>
+
             </div>
         </div>
-    </fieldset>
+    </div>
+</div>
