--- a/app/design/adminhtml/default/default/template/order/quote/form/account.phtml
+++ b/app/design/adminhtml/default/default/template/order/quote/form/account.phtml
@@ -1,5 +1,7 @@
 <?php $data = $this->getCustometData() ?>
+<?php $groups = $this->getGroup() ?>
 <div class="entry-edit">
+    <button class="scalable add" style="float: right;" onclick="accountAction()" type="button"><span>Save</span></button>
     <div class="entry-edit-head">
         <h4 class="icon-head fieldset-legend <?php echo $this->getHeaderCssClass() ?>">Account Information</h4>
     </div>
@@ -12,19 +14,18 @@
                                     <tr>
                                         <td class="label"><label for="Group">Group</label></td>
                                         <td class="value">
-                                            <?php if($data['email'] == 1): ?>
-                                                <?php echo 'General' ?>
-                                            <?php elseif($data['email'] == 2): ?>
-                                               <?php   echo 'Wholesale' ?>
-                                            <?php else: ?>
-                                                <?php echo 'Retailer' ?>
-                                            <?php endif;?></td>
+                                        <select id="customer_group" name="account[group]" class=" required-entry required-entry select">
+                                            <?php foreach($groups as $key => $value): ?>
+                                            <option <?php if($data->getGroupId() == $key): ?>selected <?php endif; ?>value="<?php echo $key ?>"><?php echo $value ?></option>
+                                            <?php endforeach; ?>
+                                    </select></td>
                                     </tr>
                                     <tr>
-                                        <td class="label"><label for="order-shipping_address_firstname">First Name </label></td>
+                                        <td class="label"><label for="customer_email">Email </label></td>
                                         <td class="value">
-                                        <?php echo $data['email'] ?>
-                                                        </td>
+                                        <input type='text' value="<?php echo $data->getEmail() ?>" name="account[email]"/>
+                                        
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
