--- a/app/design/adminhtml/default/default/template/order/quote/form/billing.phtml
+++ b/app/design/adminhtml/default/default/template/order/quote/form/billing.phtml
@@ -1,11 +1,15 @@
 <?php  $billing = $this->getBillingAddress(); ?>
+<?php  $countries = $this->getCountry(); ?>
+<div class="box-left">
 <div class="entry-edit">
 
     <div class="entry-edit-head">
-        <h4 class="icon-head fieldset-legend head-shipping-address">Billing Address</h4>
-        <input style="float: right;" type="button" onclick="updateAction()" value="Save" name="shipping" class="scalable task">
+        <h4 class="icon-head fieldset-legend head-billing-address">Billing Address</h4>
+        <button style="float: right;" type="button"  onclick="updateAction()"  name="billing" class="scalable task">Save</button>
 
      </div>
+     <div class="order-save-in-address-book" style="height: 20px;">
+        </div>
 
     <fieldset class="np">
 
@@ -17,311 +21,67 @@
                 <tr>
         <td class="label"><label for="order-billing_address_prefix">Prefix</label></td>
     <td class="value">
-        <input id="order-billing_address_prefix" name="order[billing_address][prefix]" value="<?php echo $billing['prefix'] ?>" class=" input-text" type="text">            </td>
+        <input id="order-billing_address_prefix" name="order[billing_address][prefix]" value="<?php echo $billing->getPrefix() ?>" class=" input-text" type="text">            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_firstname">First Name <span class="required">*</span></label></td>
     <td class="value">
-        <input id="order-billing_address_firstname" name="order[billing_address][firstname]" value="<?php echo $billing['firstname'] ?>" class=" required-entry input-text required-entry" type="text">            </td>
+        <input id="order-billing_address_firstname" name="order[billing_address][firstname]" value="<?php echo $billing->getFirstname() ?>" class=" required-entry input-text required-entry" type="text">            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_middlename">Middle Name/Initial</label></td>
     <td class="value">
-        <input id="order-billing_address_middlename" name="order[billing_address][middlename]" value="<?php echo $billing['middlename'] ?>" class=" input-text" type="text">            </td>
+        <input id="order-billing_address_middlename" name="order[billing_address][middlename]" value="<?php echo $billing->getMiddlename() ?>" class=" input-text" type="text">            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_lastname">Last Name <span class="required">*</span></label></td>
     <td class="value">
-        <input id="order-billing_address_lastname" name="order[billing_address][lastname]" value="<?php echo $billing['lastname'] ?>" class=" required-entry input-text required-entry" type="text">            </td>
+        <input id="order-billing_address_lastname" name="order[billing_address][lastname]" value="<?php echo $billing->getLastname() ?>" class=" required-entry input-text required-entry" type="text">            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_suffix">Suffix</label></td>
     <td class="value">
-        <input id="order-billing_address_suffix" name="order[billing_address][suffix]" value="<?php echo $billing['suffix'] ?>" class=" input-text" type="text">            </td>
+        <input id="order-billing_address_suffix" name="order[billing_address][suffix]" value="<?php echo $billing->getSuffix() ?>" class=" input-text" type="text">            </td>
     </tr>
 <!-- <tr>
         <td class="label"><label for="order-billing_address_company">Company</label></td>
     <td class="value">
         <input id="order-billing_address_company" name="order[billing_address][company]" value="" class=" input-text" type="text">            </td>
-    </tr>
-<tr> -->
+    </tr> -->
+<tr>
         <td class="label"><label for="order-billing_address_street0">Street Address <span class="required">*</span></label></td>
     <td class="value">
-        <div class="multi-input"><input id="order-billing_address_street0" name="order[billing_address][street]" value="<?php if(is_array($billing['street'])){echo $billing['street'][0];} else { echo $billing['street'] ;}  ?>" class="input-text required-entry" type="text">
+        <div class="multi-input"><input id="order-billing_address_street0" name="order[billing_address][street]" value="<?php if(is_array($billing->getStreet())){echo $billing->getStreet()[0];} else { echo $billing->getStreet()[0] ;}  ?>" class="input-text required-entry" type="text">
 </div><!-- <div class="multi-input"><input id="order-billing_address_street1" name="order[billing_address][street][1]" value="" class="input-text" type="text">
 </div> -->            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_city">City <span class="required">*</span></label></td>
     <td class="value">
-        <input id="order-billing_address_city" name="order[billing_address][city]" value="<?php echo $billing['city'] ?>" class=" required-entry input-text required-entry" type="text">            </td>
+        <input id="order-billing_address_city" name="order[billing_address][city]" value="<?php echo $billing->getCity() ?>" class=" required-entry input-text required-entry" type="text">            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_country_id">Country <span class="required">*</span></label></td>
     <td class="value">
-        <select id="order-billing_address_country_id" name="order[billing_address][country]" class=" required-entry required-entry select">
-<option value=""> </option>
-<option value="AF">Afghanistan</option>
-<option value="AL">Albania</option>
-<option value="DZ">Algeria</option>
-<option value="AS">American Samoa</option>
-<option value="AD">Andorra</option>
-<option value="AO">Angola</option>
-<option value="AI">Anguilla</option>
-<option value="AQ">Antarctica</option>
-<option value="AG">Antigua and Barbuda</option>
-<option value="AR">Argentina</option>
-<option value="AM">Armenia</option>
-<option value="AW">Aruba</option>
-<option value="AU">Australia</option>
-<option value="AT">Austria</option>
-<option value="AZ">Azerbaijan</option>
-<option value="BS">Bahamas</option>
-<option value="BH">Bahrain</option>
-<option value="BD">Bangladesh</option>
-<option value="BB">Barbados</option>
-<option value="BY">Belarus</option>
-<option value="BE">Belgium</option>
-<option value="BZ">Belize</option>
-<option value="BJ">Benin</option>
-<option value="BM">Bermuda</option>
-<option value="BT">Bhutan</option>
-<option value="BO">Bolivia</option>
-<option value="BA">Bosnia and Herzegovina</option>
-<option value="BW">Botswana</option>
-<option value="BV">Bouvet Island</option>
-<option value="BR">Brazil</option>
-<option value="IO">British Indian Ocean Territory</option>
-<option value="VG">British Virgin Islands</option>
-<option value="BN">Brunei</option>
-<option value="BG">Bulgaria</option>
-<option value="BF">Burkina Faso</option>
-<option value="BI">Burundi</option>
-<option value="KH">Cambodia</option>
-<option value="CM">Cameroon</option>
-<option value="CA">Canada</option>
-<option value="CV">Cape Verde</option>
-<option value="KY">Cayman Islands</option>
-<option value="CF">Central African Republic</option>
-<option value="TD">Chad</option>
-<option value="CL">Chile</option>
-<option value="CN">China</option>
-<option value="CX">Christmas Island</option>
-<option value="CC">Cocos (Keeling) Islands</option>
-<option value="CO">Colombia</option>
-<option value="KM">Comoros</option>
-<option value="CG">Congo - Brazzaville</option>
-<option value="CD">Congo - Kinshasa</option>
-<option value="CK">Cook Islands</option>
-<option value="CR">Costa Rica</option>
-<option value="HR">Croatia</option>
-<option value="CU">Cuba</option>
-<option value="CY">Cyprus</option>
-<option value="CZ">Czech Republic</option>
-<option value="CI">Côte d’Ivoire</option>
-<option value="DK">Denmark</option>
-<option value="DJ">Djibouti</option>
-<option value="DM">Dominica</option>
-<option value="DO">Dominican Republic</option>
-<option value="EC">Ecuador</option>
-<option value="EG">Egypt</option>
-<option value="SV">El Salvador</option>
-<option value="GQ">Equatorial Guinea</option>
-<option value="ER">Eritrea</option>
-<option value="EE">Estonia</option>
-<option value="ET">Ethiopia</option>
-<option value="FK">Falkland Islands</option>
-<option value="FO">Faroe Islands</option>
-<option value="FJ">Fiji</option>
-<option value="FI">Finland</option>
-<option value="FR">France</option>
-<option value="GF">French Guiana</option>
-<option value="PF">French Polynesia</option>
-<option value="TF">French Southern Territories</option>
-<option value="GA">Gabon</option>
-<option value="GM">Gambia</option>
-<option value="GE">Georgia</option>
-<option value="DE">Germany</option>
-<option value="GH">Ghana</option>
-<option value="GI">Gibraltar</option>
-<option value="GR">Greece</option>
-<option value="GL">Greenland</option>
-<option value="GD">Grenada</option>
-<option value="GP">Guadeloupe</option>
-<option value="GU">Guam</option>
-<option value="GT">Guatemala</option>
-<option value="GG">Guernsey</option>
-<option value="GN">Guinea</option>
-<option value="GW">Guinea-Bissau</option>
-<option value="GY">Guyana</option>
-<option value="HT">Haiti</option>
-<option value="HM">Heard &amp; McDonald Islands</option>
-<option value="HN">Honduras</option>
-<option value="HK">Hong Kong SAR China</option>
-<option value="HU">Hungary</option>
-<option value="IS">Iceland</option>
-<option value="IN">India</option>
-<option value="ID">Indonesia</option>
-<option value="IR">Iran</option>
-<option value="IQ">Iraq</option>
-<option value="IE">Ireland</option>
-<option value="IM">Isle of Man</option>
-<option value="IL">Israel</option>
-<option value="IT">Italy</option>
-<option value="JM">Jamaica</option>
-<option value="JP">Japan</option>
-<option value="JE">Jersey</option>
-<option value="JO">Jordan</option>
-<option value="KZ">Kazakhstan</option>
-<option value="KE">Kenya</option>
-<option value="KI">Kiribati</option>
-<option value="KW">Kuwait</option>
-<option value="KG">Kyrgyzstan</option>
-<option value="LA">Laos</option>
-<option value="LV">Latvia</option>
-<option value="LB">Lebanon</option>
-<option value="LS">Lesotho</option>
-<option value="LR">Liberia</option>
-<option value="LY">Libya</option>
-<option value="LI">Liechtenstein</option>
-<option value="LT">Lithuania</option>
-<option value="LU">Luxembourg</option>
-<option value="MO">Macau SAR China</option>
-<option value="MK">Macedonia</option>
-<option value="MG">Madagascar</option>
-<option value="MW">Malawi</option>
-<option value="MY">Malaysia</option>
-<option value="MV">Maldives</option>
-<option value="ML">Mali</option>
-<option value="MT">Malta</option>
-<option value="MH">Marshall Islands</option>
-<option value="MQ">Martinique</option>
-<option value="MR">Mauritania</option>
-<option value="MU">Mauritius</option>
-<option value="YT">Mayotte</option>
-<option value="MX">Mexico</option>
-<option value="FM">Micronesia</option>
-<option value="MD">Moldova</option>
-<option value="MC">Monaco</option>
-<option value="MN">Mongolia</option>
-<option value="ME">Montenegro</option>
-<option value="MS">Montserrat</option>
-<option value="MA">Morocco</option>
-<option value="MZ">Mozambique</option>
-<option value="MM">Myanmar (Burma)</option>
-<option value="NA">Namibia</option>
-<option value="NR">Nauru</option>
-<option value="NP">Nepal</option>
-<option value="NL">Netherlands</option>
-<option value="AN">Netherlands Antilles</option>
-<option value="NC">New Caledonia</option>
-<option value="NZ">New Zealand</option>
-<option value="NI">Nicaragua</option>
-<option value="NE">Niger</option>
-<option value="NG">Nigeria</option>
-<option value="NU">Niue</option>
-<option value="NF">Norfolk Island</option>
-<option value="KP">North Korea</option>
-<option value="MP">Northern Mariana Islands</option>
-<option value="NO">Norway</option>
-<option value="OM">Oman</option>
-<option value="PK">Pakistan</option>
-<option value="PW">Palau</option>
-<option value="PS">Palestinian Territories</option>
-<option value="PA">Panama</option>
-<option value="PG">Papua New Guinea</option>
-<option value="PY">Paraguay</option>
-<option value="PE">Peru</option>
-<option value="PH">Philippines</option>
-<option value="PN">Pitcairn Islands</option>
-<option value="PL">Poland</option>
-<option value="PT">Portugal</option>
-<option value="PR">Puerto Rico</option>
-<option value="QA">Qatar</option>
-<option value="RO">Romania</option>
-<option value="RU">Russia</option>
-<option value="RW">Rwanda</option>
-<option value="RE">Réunion</option>
-<option value="BL">Saint Barthélemy</option>
-<option value="SH">Saint Helena</option>
-<option value="KN">Saint Kitts and Nevis</option>
-<option value="LC">Saint Lucia</option>
-<option value="MF">Saint Martin</option>
-<option value="PM">Saint Pierre and Miquelon</option>
-<option value="WS">Samoa</option>
-<option value="SM">San Marino</option>
-<option value="SA">Saudi Arabia</option>
-<option value="SN">Senegal</option>
-<option value="RS">Serbia</option>
-<option value="SC">Seychelles</option>
-<option value="SL">Sierra Leone</option>
-<option value="SG">Singapore</option>
-<option value="SK">Slovakia</option>
-<option value="SI">Slovenia</option>
-<option value="SB">Solomon Islands</option>
-<option value="SO">Somalia</option>
-<option value="ZA">South Africa</option>
-<option value="GS">South Georgia &amp; South Sandwich Islands</option>
-<option value="KR">South Korea</option>
-<option value="ES">Spain</option>
-<option value="LK">Sri Lanka</option>
-<option value="VC">St. Vincent &amp; Grenadines</option>
-<option value="SD">Sudan</option>
-<option value="SR">Suriname</option>
-<option value="SJ">Svalbard and Jan Mayen</option>
-<option value="SZ">Swaziland</option>
-<option value="SE">Sweden</option>
-<option value="CH">Switzerland</option>
-<option value="SY">Syria</option>
-<option value="ST">São Tomé and Príncipe</option>
-<option value="TW">Taiwan</option>
-<option value="TJ">Tajikistan</option>
-<option value="TZ">Tanzania</option>
-<option value="TH">Thailand</option>
-<option value="TL">Timor-Leste</option>
-<option value="TG">Togo</option>
-<option value="TK">Tokelau</option>
-<option value="TO">Tonga</option>
-<option value="TT">Trinidad and Tobago</option>
-<option value="TN">Tunisia</option>
-<option value="TR">Turkey</option>
-<option value="TM">Turkmenistan</option>
-<option value="TC">Turks and Caicos Islands</option>
-<option value="TV">Tuvalu</option>
-<option value="UM">U.S. Outlying Islands</option>
-<option value="VI">U.S. Virgin Islands</option>
-<option value="UG">Uganda</option>
-<option value="UA">Ukraine</option>
-<option value="AE">United Arab Emirates</option>
-<option value="GB">United Kingdom</option>
-<option value="US">United States</option>
-<option value="UY">Uruguay</option>
-<option value="UZ">Uzbekistan</option>
-<option value="VU">Vanuatu</option>
-<option value="VA">Vatican City</option>
-<option value="VE">Venezuela</option>
-<option value="VN">Vietnam</option>
-<option value="WF">Wallis and Futuna</option>
-<option value="EH">Western Sahara</option>
-<option value="YE">Yemen</option>
-<option value="ZM">Zambia</option>
-<option value="ZW">Zimbabwe</option>
-<option value="AX">Åland Islands</option>
-</select>            </td>
+    <select id="order-billing_address_country_id" name="order[billing_address][country_id]" class=" required-entry required-entry select">
+        <?php foreach($countries as $contry): ?>
+        <option <?php if($billing->getCountryId() == $contry->getCountryId()): ?>selected <?php endif; ?>value="<?php echo $contry->getCountryId() ?>"><?php echo $contry->getName() ?></option>
+        <?php endforeach; ?>
+</select></td>
     </tr>
 <tr><td class="label"><label for="order-billing_address_region">State/Province <span class="required" style="display: none;">*</span></label>
-</td><td class="value"><input id="order-billing_address_region" name="order[billing_address][region]" value="<?php if($billing['state']){echo $billing['state'];}else{echo $billing['region']; } ?>" class="input-text" type="text">
+</td><td class="value"><input id="order-billing_address_region" name="order[billing_address][region]" value="<?php if($billing->getState()){echo $billing->getState();}else{echo $billing->getRegion(); } ?>" class="input-text" type="text">
 <select id="order-billing_address_region_id" name="order[billing_address][region_id]" class="select" style="display:none" defaultvalue="" disabled=""><option value="">Please select</option></select>
 </td></tr>
 <tr>
         <td class="label"><label for="order-billing_address_postcode">Zip/Postal Code <span class="required">*</span></label></td>
     <td class="value">
-        <input id="order-billing_address_postcode" name="order[billing_address][zipcode]" value="<?php if($billing['zipcode']){echo $billing['zipcode'];}else{echo $billing['postcode']; } ?>" class=" required-entry input-text required-entry" type="text">            </td>
+        <input id="order-billing_address_postcode" name="order[billing_address][postcode]" value="<?php echo $billing->getPostcode()  ?>" class=" required-entry input-text required-entry" type="text">            </td>
     </tr>
 <tr>
         <td class="label"><label for="order-billing_address_telephone">Telephone <span class="required">*</span></label></td>
     <td class="value">
-        <input id="order-billing_address_telephone" name="order[billing_address][telephone]" value="<?php echo $billing['telephone'] ?>" class=" required-entry input-text required-entry" type="text">            </td>
+        <input id="order-billing_address_telephone" name="order[billing_address][telephone]" value="<?php echo $billing->getTelephone() ?>" class=" required-entry input-text required-entry" type="text">            </td>
     </tr>
 
             </tbody>
@@ -336,4 +96,5 @@
         <div style="display: none; position: absolute; background-color: rgb(153, 153, 153); opacity: 0.8; width: 300px; height: 637px; top: 0px; left: 0px;" id="address-shipping-overlay" class="overlay"><span>Shipping address selection is not applicable</span></div>
     
     </fieldset>
+</div>
 </div>
