--- a/app/design/adminhtml/default/default/template/order/quote/shipping/method.phtml
+++ b/app/design/adminhtml/default/default/template/order/quote/shipping/method.phtml
@@ -1,20 +1,38 @@
 <?php $methods = $this->getShippingMethods() ?>
-    <fieldset class="np">
-        <div class="edit-form" id="order-shipping_address_fields">
-            <div class="content">
-                    <div class="hor-scroll">
-                            <table cellspacing="0" class="form-list">
-                                <?php foreach ($methods as $key => $value) : ?>
-                                    <tbody>
-                                        <tr>
-                                            <td><input type="radio" name="shipingMethod" id="<?php echo $key ?>" value="<?php echo $key ?>">
-                                            <label for="<?php echo $key ?>"><?php echo $key ?></label><br>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                <?php endforeach; ?>
-                            </table>
-                    </div>
+<?php $methodCode = $this->getShippingCode() ?>
+
+<div id="order-shipping_method" class="box-right">
+    <div>
+        <div class="entry-edit" style="position: relative;">
+            <button style="float: right;" type="button" onclick="methodSave()" name="billing"
+                class="scalable task">Save</button>
+            <div class="entry-edit-head">
+                <div style="float: right;"></div>
+                <h4 class="fieldset-legend head-shipping-method icon-head">Shipping Method</h4>
+            </div>
+            <div class="fieldset">
+                <div id="order-shipping-method-choose">
+                    <dl class="shipment-methods">
+                        <?php foreach($methods as $code => $method): ?>
+                        <?php if($method->getConfigData('price')): ?>
+                        <dt><strong><?php echo $method->getConfigData('title') ?></strong></dt>
+                        <dd>
+                            <ul>
+                                <li>
+                                    <input type="radio" name="method[shipping]" value="<?php echo $code ?>,<?php echo $method->getConfigData('price') ?>" <?php if($methodCode == $code): ?>checked<?php endif; ?> >
+                                        <label for="<?php echo $code ?>"><strong>₹<?php echo $method->getConfigData('price') ?></strong></label>
+                                </li>
+                            </ul>
+                        </dd>
+                        <?php endif; ?>
+                        <?php endforeach; ?>
+                    </dl>
+                </div>
+
+                <div style="display: none; position: absolute; background-color: rgb(153, 153, 153); opacity: 0.8; width: 300px; height: 129px; top: 0px; left: 0px;"
+                    id="shipping-method-overlay" class="overlay"><span>Shipping method selection is not
+                        applicable</span></div>
             </div>
         </div>
-    </fieldset>
+    </div>
+</div>
