--- a/app/design/adminhtml/default/default/template/order/show/shipping/address.phtml
+++ b/app/design/adminhtml/default/default/template/order/show/shipping/address.phtml
@@ -3,7 +3,7 @@
     <!--Billing Address-->
     <div class="entry-edit" >
         <div class="entry-edit-head" >
-            <h4 class="icon-head head-billing-address">Billing Address</h4>
+            <h4 class="icon-head head-billing-address">Shipping Address</h4>
         </div>
         <fieldset >
             <address><?php echo $address->getFirstname() ?> <?php echo $address->getLastname() ?><br>
