--- a/app/design/adminhtml/default/default/template/order/show/totals.phtml
+++ b/app/design/adminhtml/default/default/template/order/show/totals.phtml
@@ -18,7 +18,7 @@
                     </tr>
                     <tr>
                         <td class="a-right" colspan="1">
-                            Shipping &amp; Handling (Flat Rate - Fixed) </td>
+                            Shipping &amp; Handling </td>
                         <td class="a-right">
                             <span class="price">₹<?php echo $shippingAmmount ?></span>
                         </td>
