--- a/app/design/adminhtml/default/default/template/order/quote/form/billing.phtml
+++ b/app/design/adminhtml/default/default/template/order/quote/form/billing.phtml
@@ -135,7 +135,7 @@
                                     <td class="label"><label for="order-billing_address_telephone">Telephone <span
                                                 class="required">*</span></label></td>
                                     <td class="value">
-                                        <input id="order-billing_address_telephone"
+                                        <input id="telephone"
                                             name="order[billing_address][telephone]"
                                             value="<?php echo $billing->getTelephone() ?>"
                                             class=" required-entry input-text required-entry" type="text">
